@@ -6,6 +6,8 @@ Version 1.5.4+svn:
      effects without having to close the settings dialog. The preferences
      are shared with the old editor.
    * Auto update transitions option is stored in the preferences
+   * Removed map flipping
+   * Added clipboard flipping
  * Graphics:
    * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
  * Language and i18n:
